--- a/05_DL Basic/DL_Basic.ipynb
+++ b/05_DL Basic/DL_Basic.ipynb
@@ -824,7 +824,7 @@
     "\n",
     "- What's the number of paramethers of this model?\n",
     "\n",
-    "    <img src='../image/convarthmetic_03.jpeg' width=700>\n",
+    "    <img src='../image/convarthmetic_03.jpeg' width=700>  \n",
     "\n",
     "    > 1 step\n",
     "    >> 11 x 11 x 3 x 48 x 2개(gpu) $\\approx{}$ 35 k  \n",
@@ -870,6 +870,115 @@
     "\n",
     "                <img src='../image/convolution_08.jpeg' width=300>\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 08 : RNN\n",
+    "\n",
+    "- Recurrnt Neural Networks\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -01 : Sequential Model\n",
+    "\n",
+    "- naive sequence model (순차 모델)\n",
+    "\n",
+    "    <img src='../image/rnn_01.jpeg' width=350>\n",
+    "\n",
+    "    > Input : $[x_{t-2}] \\; \\rightarrow \\; [x_{t-1}] \\; \\rightarrow \\; [x_t]$  \n",
+    "    > $p(x_t \\; | \\; x_{t-1}, \\; x_{t-2}, \\; \\cdots)$\n",
+    "\n",
+    "    - sequencial data? (순차 데이터)\n",
+    "\n",
+    "        - 순서가 의미가 있으며, 순서가 달라지는 경우 의미가 손상되는 데이터\n",
+    "\n",
+    "- Autoregressive model\n",
+    "\n",
+    "    <img src='../image/rnn_02.jpeg' width=350>\n",
+    "\n",
+    "    > Input : $[x_{t-2}] \\; \\rightarrow \\; [x_{t-1}] \\; \\rightarrow \\; [x_t]$  \n",
+    "    > $p(x_t \\; | \\; x_{t-1}, \\; \\cdots, \\; \\underbrace{x_{t-\\tau{}}}_{Fix \\; the \\; past \\; timespan})$\n",
+    "\n",
+    "\n",
+    "- Markov model (first-order autoegressive model)\n",
+    "\n",
+    "    <img src='../image/rnn_03.jpeg' width=350>\n",
+    "\n",
+    "    > Input : $[x_{t-2}] \\; \\rightarrow \\; [x_{t-1}] \\; \\rightarrow \\; [x_t]$  \n",
+    "    > $\\displaystyle{p(x_1, \\; \\cdots, x_T) \\; = \\; p(x_T \\; | \\; x_{T-1})p(x_{T-1} \\; | \\; x_{T-2}) \\; \\cdots \\; p(x_2 \\; | \\; x_1)p(x_1) \\; = \\; \\underbrace{\\prod_{t=1}^T{p(x_t \\; | \\; x_{t-1})}}_{Easy \\; to \\; express \\; the \\; joint \\; distribution}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -02 : Dilemma of RNN\n",
+    "\n",
+    "- Short-term dependencies\n",
+    "\n",
+    "    - 과거의 정보로 부터 취합된 것이 미래에도 활용되어야 하는데 그 수명이 너무 짧은 단점이 있다  \n",
+    "        (정확한 의미 다시 공부 필요)\n",
+    "\n",
+    "        <img src='../image/rnn_04.jpeg' width=300>  \n",
+    "\n",
+    "- Long-term dependencies\n",
+    "\n",
+    "    - 길게 효과를 보도록 RNN 꾸리는 것이 어려웠다?  \n",
+    "        (뭔말이지 원리가 어떻게 되길래 첨듣 내용에서 앞뒤내용 다짜르고 설명하네 ㅡㅡ)\n",
+    "\n",
+    "        <img src='../image/rnn_05.jpeg' width=380>  \n",
+    "\n",
+    "- RNN 에서 Long term dependency 를 구현하기 어려운 이유\n",
+    "\n",
+    "    <img src='../image/rnn_06.jpeg' width=500>  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -03 : Long Short Term Memory\n",
+    "\n",
+    "- recurrent neural network 기본 구조  \n",
+    "    <img src='../image/rnn_07.jpeg' width=400>\n",
+    "\n",
+    "- long short term memory 구조  \n",
+    "    <img src='../image/rnn_08.jpeg' width=435> <img src='../image/rnn_09.jpeg' width=400>\n",
+    "\n",
+    "    - core idea  \n",
+    "        <img src='../image/rnn_10.jpeg' width=400>\n",
+    "\n",
+    "        - Forget Gate  \n",
+    "            <img src='../image/rnn_11.jpeg' width=600>\n",
+    "\n",
+    "        - Input Gate  \n",
+    "            <img src='../image/rnn_12.jpeg' width=600>\n",
+    "\n",
+    "        - Update Gate  \n",
+    "            <img src='../image/rnn_13.jpeg' width=600>\n",
+    "\n",
+    "        - Output Gate  \n",
+    "            <img src='../image/rnn_14.jpeg' width=600>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## -04 : Gate Recurrent Unit\n",
+    "\n",
+    "<img src='../image/rnn_15.jpeg' width=400>\n",
+    "\n",
+    "- Simpler architecture with two gates (reset gate and update gate)\n",
+    "\n",
+    "- no cell state, just hidden state\n"
    ]
   },
   {
