--- a/05_DL Basic/DL_Basic.ipynb
+++ b/05_DL Basic/DL_Basic.ipynb
@@ -723,7 +723,11 @@
     "\n",
     "        - 필터의 크기와 stirde(간경) 을 통해 convolution 된 output 의 size 을 유추할 수 있다\n",
     "        \n",
-    "            > $\\displaystyle{Output \\_ size \\; = \\; \\frac{(Input \\_ size \\; - Filter \\_ size)}{stride} \\; + \\; 1}$\n",
+    "            > $\\displaystyle{Output \\_ size \\; = \\; \\frac{(Input \\_ size \\; - Filter \\_ size \\; + (2 \\; \\times \\; Padding))}{stride} \\; + \\; 1}$  \n",
+    "            \n",
+    "            > $Number \\; of \\; Parameters \\; = \\; Kenel \\; size \\; (w \\; * h \\; * \\; d \\; \\cdots) \\; \\times \\; Input \\_ channel \\; \\times \\; Output\\_ channel \\; + \\; Output \\_ channel$  \n",
+    "            >> if, Tensor be pooled or subsampled that means parameter number is 0\n",
+    "\n",
     "\n",
     "- 예시  \n",
     "\n",
